# event-engine

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  README.txt  Trunk.toml  cal.py  event-ui-ed5617f059645fe.js  execute.txt  flake.nix  index.html
.github/workflows/: pages.yml
backend/.sqlx/: query-707a150fa8fcf3b03bdcc74901ec69db4b1f52a361fd1001bf489464a3c58271.json  query-fdf38fd5b6dbc06c039522708bfd059414e5a2d4d76b39ff174028409af75fac.json
backend/migrations/: 20240406050920_events.sql
backend/src/: lib.rs  main.rs
cli/: Cargo.toml
cli/src/: config.rs  lib.rs  main.rs  serialize.rs
data/: events.db
event-db/: Cargo.toml
event-db/src/: main.rs
event-export/: Cargo.toml
event-export/src/: lib.rs
event-scraper/: Cargo.toml
event-scraper/src/: lib.rs  main.rs
event-ui/: .typos.toml  Cargo.toml  index.html
event-ui/assets/: sw.js
event-ui/src/: app.rs  lib.rs  main.rs
filters/: Cargo.toml
filters/src/: filter.rs  good_data.rs  interests.rs  lib.rs  maps.rs
spider/: ai_parser.py  client.py  crawler.py  funcheap_crawler.py  main.py  requirements.txt  settings.py  usfca_crawler.py
src/backend/: Cargo.toml  env.nu
src/backend/.sqlx/: query-aa8782806c677382af48f1f15e96827e1d787c5e1048a5b30f6957f863508852.json  query-fa56f302ad0d99ba7c292cf53ec532c6666ee9b9702da211ca9365ab903153c6.json
src/backend/migrations/: 20240406050920_events.sql
src/backend/src/: lib.rs  main.rs
src/cli/: Cargo.toml
src/cli/src/: main.rs
src/filters/: Cargo.toml  flake.nix
src/filters/src/: interests.rs  lib.rs  main.rs  mapfilter.rs  maps.rs
