[package]
name = "cli"
version = "0.1.0"
edition = "2021"
default-run = "cli"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.37"
clap = { version = "4.5.4", features = ["derive"] }
dirs = "5.0.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
toml = "0.8.12"
backend = { path = "../backend"}
tokio = { version = "1.37.0", features = ["full"] }
