[package]
name = "event-scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.83"
clap = { version = "4.5.4", features = ["derive"] }
# reqwest = { version = "0.12.4", features = ["rustls-tls"] }
scraper = "0.19.0"
serde = { version = "1.0.202", features = ["derive"] }
# tokio = { version = "1.37.0", features = ["full"] }
