[package]
name = "event-ui"
version = "0.1.0"
edition = "2021"
default-run = "event-ui"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[dependencies]
event-scraper = { path = "../event-scraper" }

anyhow = "1.0.83"
egui = "0.27.0"
eframe = { version = "0.27.0", default-features = false, features = [
  "default_fonts",
  "glow",
  "persistence",
] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
getrandom = { version = "0.2", features = [
  "js",
] } # compilation bug for eframe, should not need to include this line
chrono = "0.4.38"
poll-promise = "0.3.0"
ehttp = "0.5.0"
# reqwest = { version = "0.12.4", features = ["rustls-tls"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"
# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
