[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
axum = "0.7.5"
chrono = { version = "0.4.37", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
sqlx = { version = "0.7.4", features = ["sqlite", "chrono", "tls-rustls", "runtime-tokio"] }
tokio = { version = "1.37.0", features = ["full"] }
tracing-subscriber = "0.3.18"
url = { version = "2.5.0", features = ["serde"] }
