[package]
name = "filters"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
async-openai = "0.20.0"
chrono = "0.4.37"
futures = "0.3.30"
google_maps = "3.4.2"
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }
url = "2.5.0"
